--- a/id3.ipynb
+++ b/id3.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n"
@@ -11,8 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = np.loadtxt(\"pa2train.txt\")\n",
@@ -22,7 +26,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self):\n",
+    "        self.data = []\n",
+    "        self.yes = None\n",
+    "        self.no = None\n",
+    "        self.label = None\n",
+    "        self.decision = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def id_three(train):\n",
+    "    root = Node()\n",
+    "    root.data = train \n",
+    "    \n",
+    "    impure = []\n",
+    "    if pure(root):\n",
+    "        root.label = root.data[0][22]\n",
+    "    else:\n",
+    "        impure.append(root)\n",
+    "    \n",
+    "    \n",
+    "    while impure:\n",
+    "        n = impure[0]\n",
+    "        impure.pop(0)\n",
+    "        \n",
+    "        impure.extend(split_decision(n))\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "    return root\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def split_decision(n):\n",
+    "    n.yes = Node()\n",
+    "    n.no = Node()\n",
+    "    \n",
+    "    d = n.data\n",
+    "    # tuple (category, threshold)\n",
+    "    most_gain = ()\n",
+    "    # essentially infinite\n",
+    "    ent = np.inf\n",
+    "    \n",
+    "    # find the best split\n",
+    "    for cat in range(22):\n",
+    "        c = d[d[:,0].argsort()]\n",
+    "        for x in range(len(c)-1):\n",
+    "            thresh = (c[x][cat] + c[x+1][cat])/2\n",
+    "            \n",
+    "            t_ent = entropy()\n",
+    "            if t_ent < ent:\n",
+    "                ent = t_ent\n",
+    "                most_gain = (cat, thresh)\n",
+    "    \n",
+    "    # create nodes\n",
+    "    \n",
+    "    return n.yes, n.no"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def entropy():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def ion():\n",
+    "    return 1, 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def pure(node):\n",
+    "    l = node.data[0][22]\n",
+    "    \n",
+    "    for i in node.data:\n",
+    "        if l != i[22]:\n",
+    "            return False\n",
+    "    return True \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "root = Node()\n",
+    "root.data = [list(range(23)), list(range(23))]\n",
+    "is_pure(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'key' is an invalid keyword argument for this function",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-31-8af771c36edf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'key' is an invalid keyword argument for this function"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = train[train[:,0].argsort()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -38,122 +237,70 @@
        "         9.50000000e+02,   1.00000000e+00])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train[0]"
+    "train[0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Node:\n",
-    "    def __init__(self):\n",
-    "        self.data = []\n",
-    "        self.yes = None\n",
-    "        self.no = None\n",
-    "        self.label = None\n",
-    "        self.decision = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def id_three(train):\n",
-    "    root = Node()\n",
-    "    root.data = train \n",
-    "    \n",
-    "    impure = []\n",
-    "    impure.append(root)\n",
-    "    \n",
-    "    while impure:\n",
-    "        n = impure[0]\n",
-    "        impure.pop(0)\n",
-    "        \n",
-    "        split_decision(n)\n",
-    "\n",
-    "        \n",
-    "        \n",
-    "    return \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def split_decision(n):\n",
-    "    n.yes = Node()\n",
-    "    n.no = Node()\n",
-    "    \n",
-    "    return n.yes, n.no"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def information_gain():\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ion():\n",
-    "    return 1, 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = [1,3]\n",
-    "x.append(ion())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 3, (1, 2)]"
+       "array([  1.00000000e+04,   1.00000000e+00,   0.00000000e+00,\n",
+       "         2.00000000e+00,   2.00000000e+00,   2.00000000e+00,\n",
+       "         3.00000000e+00,   3.00000000e+00,   3.00000000e+00,\n",
+       "         3.00000000e+00,   1.05000000e+03,   1.05000000e+03,\n",
+       "         1.05000000e+03,   1.05000000e+03,   1.05000000e+03,\n",
+       "         1.05000000e+03,   0.00000000e+00,   0.00000000e+00,\n",
+       "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "         0.00000000e+00,   1.00000000e+00])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "c[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'next'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-52-f0d2cd4c406b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'next'"
+     ]
+    }
+   ],
+   "source": [
+    "for i in c[:10]:\n",
+    "    print(i.next())\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -174,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
